Resolved contact page style sheet issue.
Also, padding was added to the pages: "index", "Services", "About us" and "Contact", since the navigation bar was overlapping the first element of the page.

--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -6,16 +6,18 @@
 .container {
     text-align: center;
     background: #f5f5f5;
+    margin-top: 100px;
+
 }
 
 .header {
-    padding-top: 30px;
     color: #444;
     font-size: 40px;
     margin: auto;
     line-height: 50px;
     font-family: Fraunces;
     color: #D24686;
+
 }
 
 .sub-container {
