--- a/css/contact.css
+++ b/css/contact.css
@@ -1,23 +1,21 @@
-.col-md-12{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: #c982db;
-    gap: 1.5rem;
-}
-
-.direction{
-    font-family: fraunces;
-    color: #0d0d0e;
-    text-align: center;
-    font-size: 12px;
+.container
+{
+    font-family: commissioner;
 }
 
 .horario{
     text-align: center;
+    color: #D24686 !important;
+    display: inline-block;
+    height: 30px;
+    width: 450px;
+    transition: .4s;
 }
 
 .socialMedia {
-    margin: 16px;
-    text-align: right;
+    margin: 10px;
+    padding-top: 60px;
+    text-align: center;
     min-width:fit-content;
 }
 
@@ -28,11 +26,29 @@
     transition: .4s;
 }
 
+.direction
+{
+    display: inline-block;
+    height: auto;
+    width: 300px;
+    transition: .4s;
+    color: #D24686;
+}
+
 .socialMedia a:hover {
     transform: scale(1.5);
 }
 
 .socialMedia a i {
-    color: black;
+    color: #D24686;
 
+}
+
+.btn
+{
+    font-family: 'Inter';
+    font-weight: bold;
+    background-color: #D24686 !important;
+    border-color: #D24686!important;
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px; 
 }
