--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,8 @@
     margin-top: 4%;
     width: 100%;
     margin: 0;
+    padding-top: 60px;
+
 }
 
 .banner-img {
